# VolLenia_Playground

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.md  README.md  README_START_HERE.md  pyproject.toml
codex_prompts/: CODEX_00_bootstrap_repo.md  CODEX_01_cuda_gl_pbo_smoke_test.md  CODEX_02_volume_renderer_mvp.md  CODEX_03_lenia_sim_mvp.md  CODEX_04_lenia3d_biology_import.md  CODEX_05_biology_polish_and_scaling.md  CODEX_06_pytorch_differentiable_bridge.md  CODEX_07_5_search_refactor_stabilization.md  CODEX_07_sensorimotor_search_mvp.md  CODEX_08_1_cpp_expanded_flow_core.md  CODEX_08_2_python_expanded_flow_twin.md
configs/: app.default.json  lenia.default.json
configs/lenia3d_reference/: README.md  animals.json
configs/modelspec/: expanded_single_kernel.json  expanded_two_kernel.json  flow_single_channel.json  flow_three_channel_complex.json  flow_two_channel.json
configs/search_mvp/maintain_animal_profile/: default.yaml
configs/search_mvp/move_shape_target/: default.yaml
configs/search_mvp/rescue_unstable_animal/: default.yaml  default_animal_24.yaml
docs/: 00_project_brief.md  01_architecture.md  02_roadmap.md  03_development_workflow.md  04_manual_preparation.md  05_reference_notes.md  06_future_branches.md  07_plan06_pytorch_bridge_retrospective.md  07_sensorimotor_search_design.md  08_stage1_algorithm_design.md  08_stage2_design_notes.md  VolLenia_ALife_environment_curriculum_roadmap.md  biology_followup_todo.md  expanded_flow_model_notes.md  modelspec_v1_draft.md  pytorch_cpp_bridge.md  renderer_future_todo.md  research_search_references.md  simulation_future_todo.md
milestones/: 00_milestone_retrospective.md  01_milestone_retrospective.md  02_milestone_retrospective.md  03_milestone_retrospective.md  04_milestone_retrospective.md  06_milestone_retrospective.md  07_5_milestone_retrospective.md  07_milestone_retrospective.md  08_1_milestone_retrospective.md  08_2_milestone_retrospective.md
plans/: PLAN_00_bootstrap_repo.md  PLAN_01_cuda_gl_pbo_smoke_test.md  PLAN_02_volume_renderer_mvp.md  PLAN_03_lenia_sim_mvp.md  PLAN_04_lenia3d_reference_import.md  PLAN_05_biology_polish_and_scaling.md  PLAN_06_pytorch_differentiable_bridge.md  PLAN_07_5_search_refactor_stabilization.md  PLAN_07_sensorimotor_search_mvp.md  PLAN_08_1_cpp_expanded_flow_core.md  PLAN_08_2_python_expanded_flow_twin.md
python/scripts/: benchmark_modelspec_torch_compile.py  benchmark_torch_compile.py  export_torch_state_to_cpp.py  plot_modelspec_kernels.py  search_modelspec_flow_smoke.py  search_sensorimotor_mvp.py  torch_modelspec_rollout.py  torch_smoke_rollout.py  torch_toy_optimize.py
python/tests/: conftest.py  test_compile_step.py  test_export_cpp_manifest.py  test_fft_step_shapes.py  test_grad_nonzero.py  test_modelspec_twin.py  test_plan07_primitives.py
python/vollenia_diff/: __init__.py  export_cpp.py  io.py  kernels.py  metrics.py  objectives.py  params.py  rollout_losses.py  simulator.py
python/vollenia_model/: __init__.py  expanded_flow.py  export_state.py  flow_transport.py  growth.py  kernels.py  parity.py  spec.py  visualization.py
python/vollenia_search/: __init__.py  archive.py  config.py  evaluate.py  export.py  mutation.py  optimize.py  profiles.py  progress.py  runner.py  sources.py  targets.py
reviews/: REVIEW_PLAN_00_BOOTSTRAP.md  REVIEW_PLAN_02_RENDERER.md  REVIEW_PLAN_03_SIMULATION.md
scripts/: convert_lenia3d_animals.py  plot_lenia_kernel_profiles.py
src/: main.cpp
src/app/: App.cpp  App.h  Camera.cpp  Camera.h  UiPanel.cpp  UiPanel.h
src/core/: CudaCheck.h  GlCheck.h  Version.h.in  VolumeDesc.h
src/io/: CellResampler.cu  CellResampler.h  CellVolumeFile.cpp  CellVolumeFile.h  LeniaAnimalCatalog.cpp  LeniaAnimalCatalog.h  ModelStateFile.cpp  ModelStateFile.h
src/model/: KernelSpec.h  ModelSpec.cpp  ModelSpec.h
src/render/: CudaPbo.cpp  CudaPbo.h  CudaVolumeRenderer.cu  CudaVolumeRenderer.h  GlDisplay.cpp  GlDisplay.h  PboSmokeTest.cu  PboSmokeTest.h  RenderParams.h  SyntheticVolume.cu  SyntheticVolume.h
src/sim/: CufftCheck.h  DeviceMultiVolume.cu  DeviceMultiVolume.h  DeviceVolume.cu  DeviceVolume.h  ExpandedFlowSimulation.cu  ExpandedFlowSimulation.h  FlowTransport.cu  FlowTransport.h  KernelBank.cu  KernelBank.h  LeniaParams.h  LeniaSeeds.cu  LeniaSeeds.h  LeniaSimulation.cu  LeniaSimulation.h
templates/: .gitignore.template  THIRD_PARTY_NOTICES.template.md  lenia.default.json
